add using directive

--- a/apps/AdminComposite/Views/Forum/Create.cshtml
+++ b/apps/AdminComposite/Views/Forum/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@using AdminComposite.Models
 @using Euclid.Composites.Mvc.Extensions
+@using ForumAgent;
 @model CreateForumInputModel
 		   
 <script type="text/javascript">
