--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -46,6 +46,8 @@
 		<script src="@Url.Content("~/Content/jquery.url-encode.js")" type="text/javascript"> </script>
 		<script src="@Url.Content("~/Content/jeditable/jquery.jeditable.js")" type="text/javascript"> </script>
 		<script src="@Url.Content("~/Content//viewport/jquery.viewport.js")" type="text/javascript"> </script>
+		<script src="@Url.Content("~/Scripts/jquery.validate.js")" type="text/javascript"></script>
+		<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
 		<script src="@Url.Content("~/CompositeInspector/scripts/euclid.js")" type="text/javascript"> </script>
 	</head>
 	<body>
