--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -9,15 +9,7 @@
 	var forumId = "@Model.ForumIdentifier";
 	$(document).ready(function() {
 		$("#create-badge").click(function() {
-			$("<div></div>")
-				.load("/Badge/NewBadge/" + forumId)
-				.modal({
-						autoResize: true,
-						autoPosition: true,
-						position: new Array(25, 250),
-						dataCss: { backgroundColor: "#fff", overflow: "hidden", height: 535, width: 585 },
-						containerCss: { height: 550, width: 600 }
-					});
+			EUCLID.showModalForm({Url: "/Badge/NewBadge/" + forumId});
 
 			return false;
 		});
