--- a/apps/AdminComposite/Views/Authentication/Create.cshtml
+++ b/apps/AdminComposite/Views/Authentication/Create.cshtml
@@ -47,38 +47,39 @@
 
 @using (Html.BeginFormForInputModel(Model, true, Url.Action("Signin", "Authentication")))
 {
+	@Html.ValidationSummary();
 	<fieldset>
 		<legend>Organization</legend>
 
 		<dl>
-			<dt><label for="organization-name">Name*</label></dt>
+			<dt>@Html.LabelFor(m=>m.OrganizationName)</dt>
 			<dd>@Html.TextBoxFor(m => Model.OrganizationName, new { id = "organization-name" })</dd>
 		
-			<dt><label for="organization-slug">Slug*</label></dt>
+			<dt>@Html.LabelFor(m=>m.OrganizationSlug)</dt>
 			<dd>@Html.TextBoxFor(m => Model.OrganizationSlug, new { id = "organization-slug" })</dd>
 
-			<dt><label for="organization-url">Website</label></dt>
+			<dt>@Html.LabelFor(m=>m.OrganizationUrl)</dt>
 			<dd>@Html.TextBoxFor(m => Model.OrganizationUrl, new { id = "organization-url" })</dd>
 
-			<dt><label for="organization-phone">Phone #*</label></dt>
+			<dt>@Html.LabelFor(m=>m.PhoneNumber)</dt>
 			<dd>@Html.TextBoxFor(m => Model.PhoneNumber, new { id = "organization-phone" })</dd>
 
-			<dt><label for="organization-address-1">Address*</label></dt>
+			<dt>@Html.LabelFor(m=>m.Address)</dt>
 			<dd>@Html.TextBoxFor(m => Model.Address, new { id = "organization-address-1" })</dd>
 
-			<dt><label for="organization-address-2">Address 2</label></dt>
+			<dt>@Html.LabelFor(m=>m.Address2)</dt>
 			<dd>@Html.TextBoxFor(m => Model.Address2, new { id = "organization-address-2" })</dd>
 
-			<dt><label for="organization-city">City*</label></dt>
+			<dt>@Html.LabelFor(m=>m.City)</dt>
 			<dd>@Html.TextBoxFor(m => Model.City, new { id = "organization-city" })</dd>
 
-			<dt><label for="organization-state">State/Region*</label></dt>
+			<dt>@Html.LabelFor(m=>m.State)</dt>
 			<dd>@Html.TextBoxFor(m => Model.State, new { id = "organization-state" })</dd>
 
-			<dt><label for="organization-zip">Zip/Postal Code*</label></dt>
+			<dt>@Html.LabelFor(m=>m.Zip)</dt>
 			<dd>@Html.TextBoxFor(m => Model.Zip, new { id = "organization-zip" })</dd>
 
-			<dt><label for="organization-country">Country*</label></dt>
+			<dt>@Html.LabelFor(m=>m.Country)</dt>
 			<dd>@Html.TextBoxFor(m => Model.Country, new { id = "organization-country" })</dd>
 		</dl>
 	</fieldset>
