--- a/apps/AdminComposite/Views/Organization/_RegisterOrganizationUser.cshtml
+++ b/apps/AdminComposite/Views/Organization/_RegisterOrganizationUser.cshtml
@@ -6,29 +6,30 @@
 {
 	@Html.HiddenFor(m => m.OrganizationId)
 	@Html.HiddenFor(m => m.CreatedBy)
+	@Html.ValidationSummary()
 	<fieldset>
 		<legend>User</legend>
 
 		<div class="input-container">
-			<label>First Name*</label>
+			<label>@Html.LabelFor(m=>m.FirstName)</label>
 			<br />
 			@Html.TextBoxFor(m => m.FirstName)
 		</div>
 
 		<div class="input-container">
-			<label>Last Name*</label>
+			<label>@Html.LabelFor(m=>m.LastName)</label>
 			<br />
 			@Html.TextBoxFor(m => m.LastName)
 		</div>
 
 		<div class="input-container">
-			<label>Email*</label>
+			<label>@Html.LabelFor(m=>m.Email)</label>
 			<br />
 			@Html.TextBoxFor(m => m.Email)
 		</div>
 
 		<div class="input-container">
-			<label>Username*</label>
+			<label>@Html.LabelFor(m=>m.Username)</label>
 			<br />
 			@Html.TextBoxFor(m => m.Username)
 		</div>
